[gd_scene load_steps=12 format=3 uid="uid://c8s32edbjs07g"]

[ext_resource type="PackedScene" uid="uid://cf0jyoi3t4sxi" path="res://scenes/wall.tscn" id="1_030lv"]
[ext_resource type="Script" path="res://scripts/game.gd" id="1_u8tjm"]
[ext_resource type="PackedScene" uid="uid://durg7i6pqtje6" path="res://scenes/bottom.tscn" id="3_0q78v"]
[ext_resource type="Texture2D" uid="uid://de8jgnya45xwj" path="res://assets/ball.png" id="4_7mglm"]
[ext_resource type="Texture2D" uid="uid://cje4kq36v1iv5" path="res://assets/aim_texture.png" id="4_u1gb6"]
[ext_resource type="PackedScene" uid="uid://4tuo7cxk8m0d" path="res://scenes/top.tscn" id="6_wdaoj"]
[ext_resource type="Script" path="res://scenes/top.gd" id="7_t2tqj"]
[ext_resource type="Texture2D" uid="uid://dddlmwew0bnvl" path="res://assets/top_panel.png" id="8_1eiqg"]
[ext_resource type="PackedScene" uid="uid://cl54rhb1l6gc1" path="res://scenes/bottom_panel.tscn" id="8_m3sfp"]
[ext_resource type="Texture2D" uid="uid://dk4llor18egh4" path="res://assets/bounce_icon.png" id="9_wwl80"]
[ext_resource type="Texture2D" uid="uid://c8ixe1rfx0huj" path="res://assets/double_icon.png" id="11_odvk2"]

[node name="game" type="Node2D"]
script = ExtResource("1_u8tjm")

[node name="globals" type="Node" parent="."]

[node name="wall" parent="." instance=ExtResource("1_030lv")]

[node name="bottom" parent="." instance=ExtResource("3_0q78v")]
position = Vector2(326, 1067)

[node name="shoot_delay" type="Timer" parent="."]
wait_time = 0.1

[node name="end_game" type="Timer" parent="."]

[node name="line_layer" type="CanvasLayer" parent="."]

[node name="aim_line" type="Line2D" parent="line_layer"]
width = 8.0
default_color = Color(0.7875, 0.78151, 0, 1)
texture = ExtResource("4_u1gb6")
texture_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="start_ball" type="Sprite2D" parent="line_layer"]
position = Vector2(-219, 916)
texture = ExtResource("4_7mglm")

[node name="RayCast2D" type="RayCast2D" parent="line_layer/start_ball"]

[node name="top" parent="." instance=ExtResource("6_wdaoj")]
script = ExtResource("7_t2tqj")

[node name="NinePatchRect" parent="top" index="0"]
texture = ExtResource("8_1eiqg")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="bottom_panel" parent="." instance=ExtResource("8_m3sfp")]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 810.0
offset_right = 540.0
offset_bottom = 918.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="bottom_panel"]
layout_mode = 0
offset_top = 16.0
offset_right = 540.0
offset_bottom = 106.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 20

[node name="HBoxContainer" type="HBoxContainer" parent="bottom_panel/MarginContainer"]
layout_mode = 2

[node name="bounce_button" type="TextureButton" parent="bottom_panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
size_flags_vertical = 0
texture_normal = ExtResource("9_wwl80")
texture_pressed = ExtResource("9_wwl80")
stretch_mode = 4

[node name="double_button" type="TextureButton" parent="bottom_panel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
size_flags_vertical = 0
texture_normal = ExtResource("11_odvk2")
stretch_mode = 4

[connection signal="change_background" from="." to="wall" method="_on_game_change_background"]
[connection signal="update_balls_available" from="." to="top" method="_on_game_update_balls_available"]
[connection signal="update_level" from="." to="top" method="_on_game_update_level"]
[connection signal="pressed" from="top/NinePatchRect/MarginContainer3/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="bottom_panel/MarginContainer/HBoxContainer/bounce_button" to="." method="_on_bounce_button_pressed"]
[connection signal="pressed" from="bottom_panel/MarginContainer/HBoxContainer/double_button" to="." method="_on_double_button_pressed"]

[editable path="top"]
